# discord-bot-tutorial-code

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  async_wrap_iter.py  bot.py  pyproject.toml  requirements.txt
