[tool.poetry]
name = "replicate-discord-bot"
version = "0.1.0"
description = ""
authors = ["Ben Firshman <ben@firshman.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
replicate = "^0.0.1-alpha.9"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
